--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -5,3 +5,10 @@
 - AI 고객센터
 - 노인 인공지능 전화 서비스
 
+# 자료 조사
+## 다중발화 음성인식
+- [Speech Recognition and Multi-Speaker Diarization of Long Conversations](https://github.com/calclavia/tal-asrd)
+- [Cross-Speaker Encoding Network for Multi-Talker Speech Recognition](https://github.com/kjw11/csenet-asr)
+
+## 다중발화 성능
+- [On Word Error Rate Definitions and their Efficient Computation for Multi-Speaker Speech Recognition Systems](https://github.com/fgnt/meeteval)
