--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -29,6 +29,7 @@
     - 화자간 의존성 학습 : Cross-Attention 메커니즘을 활용하여 각 화자의 임베딩을 다른 화자의 임베딩을 고려하여 학습
     - 텍스트 디코더 : Attention 기반 /  Serialized Output Training (SOT) 방식을 적용
 - Whisper의 경우 SIMO 처럼 동작하기 위해 Pyannote-Diarization 패키지 사용 필요
+- License : 연구 및 서비스개발에 자유롭게 사용 가능
 
 ### [Acoustic modeling for Overlapping Speech Recognition- JHU Chime-5 Challenge System](https://github.com/fgnt/nara_wpe)
 
