--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -28,7 +28,9 @@
     - 화자 인식 인코더 : Transformer 기반 구조 / CNN 기반 전처리
     - 화자간 의존성 학습 : Cross-Attention 메커니즘을 활용하여 각 화자의 임베딩을 다른 화자의 임베딩을 고려하여 학습
     - 텍스트 디코더 : Attention 기반 /  Serialized Output Training (SOT) 방식을 적용
-- Whisper의 경우 SIMO 처럼 동작하기 위해 Pyannote-Diarization 패키지 사용 필요
+- 본 논문에서 사용된 모델은 Conformer (Transformer + CNN )
+  - Whisper의 경우 SIMO 처럼 동작하기 위해 **Pyannote-Diarization** 패키지 사용 필요
+  - 본 논문을 whisper로 변경하려면 전체 입출력을 바꿔야 함
 - License : 연구 및 서비스개발에 자유롭게 사용 가능
 
 ### [Acoustic modeling for Overlapping Speech Recognition- JHU Chime-5 Challenge System](https://github.com/fgnt/nara_wpe)
