--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -32,6 +32,9 @@
   - Whisper의 경우 SIMO 처럼 동작하기 위해 **Pyannote-Diarization** 패키지 사용 필요
   - 본 논문을 whisper로 변경하려면 전체 입출력을 바꿔야 함
 - License : 연구 및 서비스개발에 자유롭게 사용 가능
+- GPT의 조언
+  -  Conformer를 다국어 데이터셋으로 파인튜닝 (Fine-tuning)
+  -  Conformer 모델을 그대로 사용하되, Whisper 같은 다국어 ASR 모델과 결합
 
 ### [Acoustic modeling for Overlapping Speech Recognition- JHU Chime-5 Challenge System](https://github.com/fgnt/nara_wpe)
 
