--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -37,6 +37,29 @@
   -  Conformer 모델을 그대로 사용하되, Whisper 같은 다국어 ASR 모델과 결합
 
 ### [Acoustic modeling for Overlapping Speech Recognition- JHU Chime-5 Challenge System](https://github.com/fgnt/nara_wpe)
+원거리 및 중첩 음성 환경에서 음성 인식 성능을 향상시키기 위해 다양한 **데이터 증강, 신경망 모델 개선, 전처리 기법**을 적용하고 Kaldi 기반 새로운 ASR 시스템을 개발
+
+- **환경**
+    - 마이크 방향을 향하지 않은 화자도 존재→ 왜곡 있음
+    - 집안의 소음이 존재
+    - 다양한 위치에서 녹음
+
+The speech data consists of real 4-people dinner party conversations recorded using linear array microphones, and annotated with speech
+start/end times, the speaker labels and speech transcription.
+
+- **데이터 증강**
+    - chime-5
+    - Kaldi → 채택
+        - 합성 RIR 사용
+        - 외부 소음 데이터 (MUSAN) 추가
+- **Neural Network Architentures**
+    
+    : 화자분리는 X
+    
+    - TDNN
+    - TDNN + LSTM
+    - TDNN + F
+    - DNN + TDNN + LSTM
 
 ### [Speaker Embedding-aware Neural Diarization: an Efficient Framework for Overlapping Speech Diarization in Meeting Scenarios](https://github.com/modelscope/FunASR)
 
