--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -9,7 +9,7 @@
 ## 다중발화 음성인식
 ### [Speech Recognition and Multi-Speaker Diarization of Long Conversations](https://github.com/calclavia/tal-asrd)
 
-### [Cross-Speaker Encoding Network for Multi-Talker Speech Recognition](https://github.com/kjw11/csenet-asr)
+### [Cross-Speaker Encoding Network for Multi-Talker Speech Recognition(2024)](https://github.com/kjw11/csenet-asr)
 - 기존의 다중 화자 음성인식 모델의 접근법
   - SIMO(Single-Input Multiple-Output) 모델 : 여러 개의 분리된 인코더를 통해 처리
   - SISO(Single-Input Single-Output) 모델 : 주로 어템션 기반 인코더-디코더 아카텍처 사용
@@ -61,7 +61,44 @@ start/end times, the speaker labels and speech transcription.
     - TDNN + F
     - DNN + TDNN + LSTM
 
-### [Speaker Embedding-aware Neural Diarization: an Efficient Framework for Overlapping Speech Diarization in Meeting Scenarios](https://github.com/modelscope/FunASR)
-
+### [Speaker Embedding-aware Neural Diarization: an Efficient Framework for Overlapping Speech Diarization in Meeting Scenarios(2022)](https://github.com/modelscope/FunASR)
+- 회의에서 누가 언제 말을 했는가를 초점 -> SEND 프레임워크로 SD 한계 극복
+- 기존 방법론의 한계
+  - 클러스터링 기반 SD 기법 : 중첩 발화 처리에 어려움
+  - End-to-End Neural Diarization : 라벨 순서 문제 발생 및 대규모 지도 학습 데이터 필요 -> **Conformer 기반 모델**
+    - 새로운 환경에서 일반화되기 어려움
+    - 학습 복잡 
+  - Target-Speaker Voice Activity Detection : 성능은 우수하나 계산량이 많아 효율성 낮음
+    - 실시간 시스템 적용이 어려움 
+- 적용 기술
+  - 화자 분리 정확도를 높이면서 계산량은 줄임
+  - Power-set Encoding (PSE)
+    - 다중 화자 분류 문제를 단일 라벨 예측(single-label prediction) 문제로 변환하여 학습
+    - 중첩 발화 처리를 더 효과적
+  - 듀얼 유사도 평가 기법(Dual Similarity Scoring Mechanism) 도입
+    - Context-Independent (CI) Scorer: 현재 프레임에서 화자의 특징을 독립적으로 평가
+    - Context-Dependent (CD) Scorer: 문맥(Context)을 고려하여 화자 임베딩을 정교하게 조정   
+- 모델 아키텍처
+  - 음성 인코더 : FSMN 모델로 긴 문맥 정보로 부터 음향 특징 추출
+  - 화자 인코더 : 화자 임베딩 추출 / 사전 학습된 TDNN 활용
+  - 이중 유사도 평가 기법
+    - Context-Independent (CI) Scorer : 화자 임베딩 간 유사도 도출
+    - Context-Dependent (CD) Scorer :  문맥을 반영한 화자 임베딩 학습
+  - Power-Set Encoding (PSE) : 기존 모델들은 다중 라벨 분류지만 단일 라벨 예측 문제로 변환
+  	•	예시:
+  	•	화자 A, B, C가 있다고 가정
+  	•	프레임 1: A만 말함 → Label: {A}
+  	•	프레임 2: A와 B가 동시에 말함 → Label: {A, B}
+  	•	프레임 3: 아무도 말하지 않음 → Label: {}
+  	•	이러한 조합을 고유한 단일 라벨로 인코딩하여 학습 수행
+- 학습 과정
+  - 데이터로 기본 모델 지도 학습
+  - 실제 회의 데이터로 파인튜닝
+  - 도메인 적용해 최적화 
+- 학습 데이터
+  - AliMeeting : 실제 회의 데이터를 포함한 다중 화자 음성 데이터셋
+  - 총 120시간의 녹음 데이터 포함
+  - 발화 중첩 : 34~42%
+ 
 ## 다중발화 성능
 - [On Word Error Rate Definitions and their Efficient Computation for Multi-Speaker Speech Recognition Systems](https://github.com/fgnt/meeteval)
