--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -99,6 +99,10 @@ start/end times, the speaker labels and speech transcription.
   - AliMeeting : 실제 회의 데이터를 포함한 다중 화자 음성 데이터셋
   - 총 120시간의 녹음 데이터 포함
   - 발화 중첩 : 34~42%
+- License : 연구용으로는 사용이 가능하나 서비스 개발은 조심(직접적 언급이 없음)해야하며 출처 및 모델 이름을 유지해야 함
+  - 학술 연구 및 비영리적 목적으로 활용하는 것은 제한이 없음.
+    - 단, 논문이나 연구 자료에서 FunASR의 출처와 저작권 정보(Alibaba Group)를 명시해야 함.
+
  
 ## 다중발화 성능
 - [On Word Error Rate Definitions and their Efficient Computation for Multi-Speaker Speech Recognition Systems](https://github.com/fgnt/meeteval)
