--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -106,3 +106,61 @@ start/end times, the speaker labels and speech transcription.
  
 ## 다중발화 성능
 - [On Word Error Rate Definitions and their Efficient Computation for Multi-Speaker Speech Recognition Systems](https://github.com/fgnt/meeteval)
+
+## 자연어처리 텍스트 요약(Text Summarization)
+### [BART: Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension](https://arxiv.org/abs/1910.13461)
+![image](https://github.com/user-attachments/assets/68cd5b04-4c97-4f97-abd0-b30bfc65ee6d)
+  - 자연어 처리에서 텍스트 요약은 긴 문서에서 핵심 내용을 추출하여 압축된 정보를 제공하는 중요한 기술
+  - 기존 요약 기법들의 한계를 극복하기 위해 사전 학습된 언어 모델(Pre-trained Language Models) 및 다양한 기법을 활용
+
+
+ - BART 모델의 개념 및 구조
+   - BART ?
+     - Bidirectional Encoder와 Auto-Regressive Decoder를 결합한 seq2seq 모델
+     - 다양한 noising 전략을 적용할 수 있는 유연한 denoising autoencoder
+     - 기본적인 트랜스포머 구조 + Activation으로 ReLU 대신 GeLU 사용
+     - Base: 6 enc layers & 6 dec layers
+     - Large: 12 enc layers & 12 dec layers
+     - BERT와의 아키텍처적 차이점
+
+   - 모델 아키텍처
+     - 인코더: BERT와 유사한 양방향 Transformer
+     - 디코더: GPT와 유사한 left-to-right autoregressive 모델, 단 cross-attention을 통해 인코더의 정보를 활용
+     - 세부 차이: 디코더의 활성화 함수로 GeLU 사용, 파라미터 초기화 방식 차이 등
+
+![image](https://github.com/user-attachments/assets/4e120a20-c847-4fe4-979f-8af2b286b7b3)
+   
+   - 사전학습(Pre-training) 단계
+     - 텍스트 오염: 문장을 다양한 방법(토큰 마스킹, 삭제, 텍스트 인필링, 문장 순서 섞기, 문서 회전 등)으로 변형
+     - 복원 학습: seq2seq 구조를 사용해 원본 텍스트를 복원하도록 학습
+
+![image](https://github.com/user-attachments/assets/e8607219-7ed4-4269-951a-c3a1567053c6)
+
+       
+   - 정리
+     - 구조 : GPT와 BERT의 특성을 결합한 Encoder-Decoder 구조
+     - 사전 학습 : 입력 문장에 노이즈를 추가(단어 마스킹, 문장 순서 섞기 등)한 후 이를 원래 문장으로 복원하는 방식으로 학습
+     - 활용 분야: 요약(Summarization), 기계 번역(Machine Translation), 텍스트 생성(Text Generation) 등
+  
+   - 성능
+![image](https://github.com/user-attachments/assets/b722cd82-929d-445b-99ae-74747fbf28a2)
+
+ - 각 모델별 비교
+   - BART
+     - Transformer 기반, Seq2Seq
+     - 생성 요약 (Abstractive)
+     - 문맥 이해가 뛰어나고 부드러운 요약 가능
+   - T5
+     - Text-to-Text Transformer
+     - 생성 요약 (Abstractive)
+     - 다양한 NLP 작업 지원
+   - PEGASUS
+     - 대규모 뉴스 데이터 학습
+     - 생성 요약 (Abstractive)
+     - 뉴스, 논문 요약 성능 우수
+   - BERTSUM
+     - BERT 기반, Extractive
+     - 추출 요약 (Extractive)
+     - 원본 문장을 유지하여 신뢰도 높음
+    
+     
