--- a/docs/자료조사.md
+++ b/docs/자료조사.md
@@ -79,3 +79,17 @@
 - 화자 분리 + 다국어 지원
 - 비즈니스 출장자 및 외국계 기업 종사자들이 자주 사용하는 언어 환경에 최적화
   - 글로벌 시장 경쟁력 확보    
+
+
+
+# 모델관련
+## Q. 왜 Whisper
+- whisper의 경우 다국어 음성 데이터셋으로 학습된 음성인식 모델이며
+- 다국어 모델 중 최고
+- 그에 비해 Conformer의 경우 영어 중심으로 설계되어 있기에 아쉽
+  - 하지만 Conformer의 경우 실시간 음성인식 가능
+  - 
+
+## Q. 왜 Pyannote
+- 딥러닝 기반 화자 분리 임베딩 방식
+- 비실시간이지만 다국어를 지원하며, 중첩 발화 처리가 가능함
