--- a/docs/자료조사.md
+++ b/docs/자료조사.md
@@ -88,8 +88,16 @@
 - 다국어 모델 중 최고
 - 그에 비해 Conformer의 경우 영어 중심으로 설계되어 있기에 아쉽
   - 하지만 Conformer의 경우 실시간 음성인식 가능
-  - 
+- **비교 실험**
+  - Conformer
+  - Wav2Vec2.0 
+- 음성 인식 성능
+  - WER : STT 모델 평가(낮을수록 좋음)
+  - CER : 문자 수준에서 오류 평가 
 
 ## Q. 왜 Pyannote
 - 딥러닝 기반 화자 분리 임베딩 방식
 - 비실시간이지만 다국어를 지원하며, 중첩 발화 처리가 가능함
+- 화자 분리 성능 평가
+  - DER(Diarization Error Rate) : 화자 분리 정확도
+  - ER (Jaccard Error Rate) : 화자 세그먼트 간 유사성 평가
