--- a/docs/후처리_꿀팁.md
+++ b/docs/후처리_꿀팁.md
@@ -6,3 +6,23 @@ I have a solution that works 95% of the time with some post-processing of the di
 - Full overlap: Longer segments. I divide the longer segment into two, the shorter segment intercepts it and overwrites.
 - Partial overlaps: If segment is less than 2 seconds, and overlaps more than 0.6 seconds -> delete (unnecessary interruptions at the end of the sentence)
 - Partial overlaps longer: I modify end of first segment to a new value (start of 2nd segment)
+
+
+이 해결책은 현재 95% 정도의 정확도를 가지고 있으며, pandas를 사용하여 화자 분할(diarization) 결과를 후처리하여 개선하려는 목표입니다. 최종 데이터프레임에서 겹치는(overlap) 부분이 완전히 사라지도록 조정하는 것이 목표입니다.
+
+처리 방식
+완전한 겹침(Full Overlap)과 부분 겹침(Partial Overlap)을 구분
+
+완전한 겹침: 첫 번째 화자가 말하는 도중에 두 번째 화자가 들어와 말하는 경우
+부분 겹침: 첫 번째 화자의 발화 끝부분과 두 번째 화자의 시작 부분이 겹치는 경우
+불필요한 짧은 발화 제거
+
+0.5초 미만의 발화는 삭제 (대부분 "흠(hmm)"이나 짧은 "네(yes)" 같은 것들이므로)
+완전한 겹침 처리 (Full Overlap)
+
+1초 미만의 발화는 삭제 (대부분 다른 사람이 말하는 도중에 너무 빨리 끼어들었다가 멈추는 경우)
+1초 이상의 긴 발화가 다른 발화와 겹칠 경우, 더 긴 발화를 두 개로 나누어 짧은 발화가 끼어들도록 조정
+부분 겹침 처리 (Partial Overlap)
+
+2초 미만의 발화가 0.6초 이상 겹치면 삭제 (문장 끝에서 불필요한 끼어들기를 제거)
+긴 발화일 경우, 첫 번째 발화의 종료 시간을 조정하여 두 번째 발화가 자연스럽게 이어지도록 수정
