--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -145,7 +145,7 @@ start/end times, the speaker labels and speech transcription.
    - 성능
 ![image](https://github.com/user-attachments/assets/b722cd82-929d-445b-99ae-74747fbf28a2)
 
- - 각 모델별 비교
+ - [Text Summarization Repo 참고](https://arxiv.org/abs/1910.13461)
    - BART
      - Transformer 기반, Seq2Seq
      - 생성 요약 (Abstractive)
