--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -162,5 +162,9 @@ start/end times, the speaker labels and speech transcription.
      - BERT 기반, Extractive
      - 추출 요약 (Extractive)
      - 원본 문장을 유지하여 신뢰도 높음
-    
-     
+
+# WhisperX
+- https://github.com/m-bain/whisperX
+
+# WavLM
+- https://github.com/microsoft/unilm/tree/master/wavlm
