--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -165,6 +165,8 @@ start/end times, the speaker labels and speech transcription.
 
 # WhisperX
 - https://github.com/m-bain/whisperX
+- whisperX의 깃허브의 기본 구조는 whisperX를 통해 STT 이후에 화자 분리 함.
+- 만약 whisperX를 사용한다면, 화자분리를 먼저 수행하고 STT하도록 수정해야함 + 화자분리 모델에 파인튜닝한 Nemo를 함께 사용하는 방식 예상
 
 # WavLM
 - https://github.com/microsoft/unilm/tree/master/wavlm
