--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -170,3 +170,6 @@ start/end times, the speaker labels and speech transcription.
 
 # WavLM
 - https://github.com/microsoft/unilm/tree/master/wavlm
+- 방법1. Pyannote의 Embedding을 WavLM으로 교체
+- 방법2. Pyannote와 WavLM을 Multi-Stage Pipeline으로 결합
+    - WavLM 전처리 -> Pyannote 화자분리 (-> WavLM기반 Re-Ranking)
