--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -173,3 +173,4 @@ start/end times, the speaker labels and speech transcription.
 - 방법1. Pyannote의 Embedding을 WavLM으로 교체
 - 방법2. Pyannote와 WavLM을 Multi-Stage Pipeline으로 결합
     - WavLM 전처리 -> Pyannote 화자분리 (-> WavLM기반 Re-Ranking)
+    - 이전과 다르게 오디오 파일이 아니라 특징벡터를 pyannote에 넣어야 함
