--- a/docs/주제 선정.md
+++ b/docs/주제 선정.md
@@ -172,5 +172,6 @@ start/end times, the speaker labels and speech transcription.
 - https://github.com/microsoft/unilm/tree/master/wavlm
 - 방법1. Pyannote의 Embedding을 WavLM으로 교체
 - 방법2. Pyannote와 WavLM을 Multi-Stage Pipeline으로 결합
-    - WavLM 전처리 -> Pyannote 화자분리 (-> WavLM기반 Re-Ranking)
+    - WavLM 전처리 -> Pyannote 화자분리
     - 이전과 다르게 오디오 파일이 아니라 특징벡터를 pyannote에 넣어야 함
+- 방법3. pyannote로 화자 분리한 것과, WavLM으로 추출한 것을 비교하여 같은 화자이지만 Pyannote가 다른 화자로 인식한 경우 이를 수정
