--- a/docs/생각해볼부분(이후 삭제).md
+++ b/docs/생각해볼부분(이후 삭제).md
@@ -1,7 +1,7 @@
 ## ASR 관련
 ### 다국어 처리를 위해 사용한 데이터, 튜닝 방법 설명
 - 대부분 모델 학습 시, 이미 Ali, AMI 등을 사용했을 텐데..
-  - A. multilingual speaker diarization task를 수행하기 위해 다국어 셋이 중첩되고 병합된 상태에서 분리하는 파인튜닝 시도하였음.
+  - A. 우리는 multilingual speaker diarization task를 수행하기 위해 다국어 셋을 중첩되고 병합된 상태에서 분리하는 파인튜닝 시도하였음.
 - Pyannote + whisper 튜닝 방법
   - speaker diarization pipeline을 사용
   - pyannote의 segmentation model을 데이터셋에 맞게 fine-tuning하였음.
